# sqlite_wrapper

./: CMakeLists.txt
include/: sqlite_wrapper.h
src/: log.h  sqlite_wrapper.cpp
test/: CMakeLists.txt  main.cpp  test.cpp
